--- a/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -64,6 +64,7 @@
         <div class="col-xs-4 col-sm-4 col-md-4 add-ct">
             <div><a href="tel:commonInfo.HotLine"><i class="fa fa-phone"></i> @Anpero.StringHelpper.FormatPhoneNumber(commonInfo.HotLine)</a> </div>
             <div><a href="@commonInfo.FaceBookLink"><i class="fa fa-facebook"></i> @commonInfo.Name</a></div>
+            <div><a href="mailto:@commonInfo.FaceBookLink"><i class="fa fa-envelope"></i> @commonInfo.Email</a></div>
             <address><i class="fa fa-home"></i> @commonInfo.Address</address>
         </div> 
             <div class="col-xs-5 col-sm-3 col-md-2 group-button-header">
