--- a/07_Shop_MultiProduct/Views/Home/Contact.cshtml
+++ b/07_Shop_MultiProduct/Views/Home/Contact.cshtml
@@ -36,7 +36,7 @@
             <div id="message-box-conact"></div>
             <div class="row">
                 <div class="col-sm-6">
-                    <h3 class="page-subheading">Gửi tin nhắn cho Ngon&Lành</h3>
+                    <h3 class="page-subheading">Gửi tin nhắn cho @commonInfo.Name</h3>
                     <div class="contact-form-box">                       
                         <div class="form-selector">
                             <label>Tên liên hệ </label>
