--- a/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
 				moneyFormat: "${{amount}}",
 			};
     </script>
+    <link href="~/assets/stylesheet/font-awesome.css" rel="stylesheet" />
 </head>
 <body class="template-index scheme_1">
     <div class="page_wrapper">
