--- a/06_Shop_Onepage/Views/Product/Checkout.cshtml
+++ b/06_Shop_Onepage/Views/Product/Checkout.cshtml
@@ -129,7 +129,7 @@
 </div>
 @section scripts{
     <script src="~/Scripts/Bootrap.notify.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js?onload=renderCapcha&render=explicit"></script>
     <script>
         var googleCatcha;
         $(document).ready(function () {
@@ -145,13 +145,16 @@
             $("#orderBtn").click(function () {
                 Cart.sendOrder();
             });
+          
+            Cart.bindTempForm();
+        });
+        function renderCapcha() {
             googleCatcha = grecaptcha.render('g-recaptcha', {
                 'sitekey': googleCapchaSitekey,
                 'theme': 'light',
                 'hl': 'vi'
             });
-            Cart.bindTempForm();
-        });
+        }
     </script>
 }
  
