--- a/07_Shop_MultiProduct/Views/Product/Checkout.cshtml
+++ b/07_Shop_MultiProduct/Views/Product/Checkout.cshtml
@@ -7,7 +7,7 @@
         ViewBag.WebsiteUrl = HttpContext.Current.Request.Url.AbsoluteUri;
         ViewBag.Keywords = Anpero.StringHelpper.UnicodeToKoDau(commonInfo.Desc);
     }
-    <link href = "/assets/stylesheet/NganLuongBankList.css" rel = "stylesheet" />
+    <link href="/assets/stylesheet/NganLuongBankList.css" rel="stylesheet" />
 }
 @section health{
     <meta name="description" content="@commonInfo.Desc" />
@@ -97,7 +97,7 @@
                                         <label for="radio_button_6"><input type="radio" name="radio_4" id="radio_button_6" value="2" data-ship="15000"> Thu tiền tại nhà 15.000 đ</label>
                                     </li>
                                     <li>
-                                        <label for="radio_button_7"><input type="radio" name="radio_4" id="radio_button_7" value="NL" data-ship="0">  Thanh toán bằng Ví điện tử NgânLượng <span class="red">(miễn phí)</span></label>                                       
+                                        <label for="radio_button_7"><input type="radio" name="radio_4" id="radio_button_7" value="NL" data-ship="0">  Thanh toán bằng Ví điện tử NgânLượng <span class="red">(miễn phí)</span></label>
                                     </li>
                                     <li>
                                         <label for="radio_button_8" id="lb1"><input type="radio" name="radio_4" id="radio_button_8" value="ATM_ONLINE" data-ship="0"> Thanh toán online bằng thẻ ngân hàng nội địa <span class="red">(miễn phí)</span></label>
@@ -265,9 +265,9 @@
                                     <li>
                                         <label for="radio_button_9"><input type="radio" name="radio_4" id="radio_button_9" value="VISA" data-ship="0"> Thanh toán bằng thẻ Visa hoặc MasterCard <span class="red">(miễn phí)</span></label>
                                     </li>
-                                
+
                                 </ul>
-                            
+
                             </div>
                         </div>
                         <h3 class="checkout-sep">4. Kiểm tra lại thông tin sản phẩm</h3>
@@ -299,18 +299,18 @@
                                     </tfoot>
                                 </table>
                             </div>
-                            
+
                             <div class="clearfix"></div>
-                            <div class="col-xs -12 ctContent" >
+                            <div class="col-xs -12 ctContent">
                                 <div id="g-recaptcha" class="pull-right"></div>
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-xs -12">
                                 <a href="/" title="Continue Shopping" class="btn button btn-continue" onclick=""><span><span>Mua thêm</span></span></a>
-                            
+
                                 <button type="submit" name="update_cart_action" value="update_qty" title="Update Cart" class="btn button pull-right" id="orderBtn"><span><span>Gửi đơn hàng</span></span></button>
                             </div>
-                            
+
                             <div class="clearfix"></div>
                         </div>
                     </div>
@@ -324,8 +324,8 @@
     </div>
 </div>
 @section scripts{
-<script src="~/Scripts/Bootrap.notify.js"></script>
-<script src="https://www.google.com/recaptcha/api.js"></script>
+    <script src="~/Scripts/Bootrap.notify.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js?onload=renderCapcha&render=explicit"></script>
     <script>
         var googleCatcha;
         $(window).load(function () {
@@ -343,12 +343,15 @@
             });
             $("#lb1").click(function () {
                 $(".cardList").show();
-            });            
+            });
+           
+        });
+        function renderCapcha() {
             googleCatcha = grecaptcha.render('g-recaptcha', {
                 'sitekey': googleCapchaSitekey,
                 'theme': 'light',
                 'hl': 'vi'
             });
-        });
+        }
     </script>
 }
