--- a/09_Theme_08_v2/Views/Product/Checkout.cshtml
+++ b/09_Theme_08_v2/Views/Product/Checkout.cshtml
@@ -312,10 +312,10 @@
 </div>
 @section scripts{
     <script src="~/Scripts/Bootrap.notify.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js?onload=renderCapcha&render=explicit"></script>
     <script>
         var googleCatcha;
-        $(window).load(function () {
+        $(document).ready(function () {
             var width = $(window).width();
             $("#ajax_loader").css("left", ((width / 2) - 100) + "px")
             Cart.bindCartTable();
@@ -334,12 +334,15 @@
             $(".lb2").click(function () {
                 $(".cardList").hide();
             });
+           
+            Cart.bindTempForm();
+        });
+        function renderCapcha() {
             googleCatcha = grecaptcha.render('g-recaptcha', {
                 'sitekey': googleCapchaSitekey,
                 'theme': 'light',
                 'hl': 'vi'
             });
-            Cart.bindTempForm();
-        });
+        }
     </script>
 }
